# siwim

./: .gitignore  Project1.ipynb  config.py  dev.ipynb  evaluator.py  example.ipynb  pyproject.toml  sp_retro.ipynb
old_stuff/: predictors.py
project01/: Project1.ipynb  evaluator.py  super_classifier.py  utils.py
