[project]
name = "siwim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy==1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xlrd>=2.0.1",
]
